General improvements and fixes Changed the gpuline and gpuname variables names to improve readability Fixed the FP32 performance for Radeon RX 9000 series cards Fixed the the models headers colors for third party cards Added new graphics cards to match both the MySQL local database and the remote MongoDB GPUs list

--- a/public/styles.css
+++ b/public/styles.css
@@ -43,10 +43,10 @@ input {
 }
 
 /* Style for the GPU name header */ 
-.gpu-name-header-nvidia, 
-.gpu-name-header-amd, 
-.gpu-name-header-intel, 
-.gpu-name-header {
+.model-header-nvidia, 
+.model-header-amd, 
+.model-header-intel, 
+.model-header {
     text-align: center;
     font-size: 30px;
     margin-bottom: 15px;
@@ -55,15 +55,15 @@ input {
     display: block;
 }
 
-.gpu-name-header-nvidia {
+.model-header-nvidia {
     color: #76b900;
 }
 
-.gpu-name-header-amd {
+.model-header-amd {
     color: red;
 }
 
-.gpu-name-header-intel {
+.model-header-intel {
     color: #0068B5;
 }
 
